--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 url: "https://kipukas.cards" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
-title: "Kipukas Binder" # the name of your site, e.g. ACME Corp.
+title: "Kipukas" # the name of your site, e.g. ACME Corp.
