--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -8,4 +8,4 @@ windows:
         - sleep 2 && jekyll server --host=0.0.0.0 --livereload --watch
         - jekyll build --watch
         - tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch
-        - cd ~/Repos/text-generation-webui-main && ./start_linux.sh
+        - sleep 4 && firefox http://localhost:4000 && clear
