--- a/kipukas-server/Cargo.toml
+++ b/kipukas-server/Cargo.toml
@@ -9,6 +9,8 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 matchit = "0.8"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
