Minify in build

--- a/deno.json
+++ b/deno.json
@@ -22,8 +22,9 @@
     "build:card-catalog": "deno run -A scripts/build-card-catalog.ts",
     "build:wasm": "deno task build:card-catalog && cd kipukas-server && wasm-pack build --target web --out-dir ../assets/js-wasm/kipukas-server-pkg --release && rm -f ../assets/js-wasm/kipukas-server-pkg/.gitignore",
     "build:sw": "deno run -A npm:workbox-cli injectManifest workbox-config.cjs",
+    "build:minify": "deno run -A scripts/minify-site.ts",
     "build:rules": "cd kipukas_rules_book && /Users/lah-rb/.deno/bin/deno task build:all",
-    "build": "deno task build:wasm && deno task build:htmx && deno task build:css && deno task build:alpine && deno task build:rules && rm -rf game_rules && mv kipukas_rules_book/dist game_rules && JEKYLL_ENV=production jekyll build && deno task build:sw",
+    "build": "deno task build:wasm && deno task build:htmx && deno task build:css && deno task build:alpine && deno task build:rules && rm -rf game_rules && mv kipukas_rules_book/dist game_rules && JEKYLL_ENV=production jekyll build && deno task build:sw && deno task build:minify",
     "dev:css": "deno run -A npm:@tailwindcss/cli -i ./assets/css/input.css -o ./assets/css/output.css --watch",
     "fmt": "deno fmt",
     "lint": "deno lint",
