--- a/kipukas-server/Cargo.toml
+++ b/kipukas-server/Cargo.toml
@@ -11,6 +11,8 @@ wasm-bindgen = "0.2"
 matchit = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+yrs = "0.25"
+base64 = "0.22"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
