--- a/kipukas-server/Cargo.toml
+++ b/kipukas-server/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 yrs = "0.25"
 base64 = "0.22"
+hmac-sha256 = "1.1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
